<resources>
    <string name="app_name">P7Go4Lunch</string>
    <string name="eating_at">mange au</string>
    <string name="coming">y va !</string>
    <string name="dont_choose"> n\'a pas encore choisi </string>
    <string name="Map">Carte</string>
    <string name="list">Liste </string>
    <string name="workmate">Collegues</string>
    <string name="facebook_application_id" translatable="false">1255943667937708</string>
    <string name="navigation_drawer_open" translatable="false">ouvrir</string>
    <string name="navigation_drawer_close" translatable="false">fermé</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="twentyfourhourcommand">Cette commande s\'effacera dans 24h</string>
    <string name="rendezvous1">Bonjour, vous avez rendez vous a</string>
    <string name="dontforget">, ne l\'oubliez pas</string>
    <string name="rendezvous">Hello, vous avez rendez vous a</string>
    <string name="dontforgetit1"> ne l\'oubliez pas</string>
    <string name="rendezvous2">Votre rendez-vous vous sera rappelé demain midi</string>
    <string name="rendezvous3">Votre rendez vous a midi </string>
    <string name="rdv1">Bonjour, vous avez rendez vous a </string>
    <string name="with"> avec </string>
    <string name="dontforget1">, ne l\'oubliez pas</string>
    <string name="reminder">Rappel</string>
    <string name="nordv">Il n\'y a pas de rendez vous encore enregistrez a votre nom</string>
    <string name="areyousur">Etes vous sûr ?</string>
    <string name="no">Non</string>
    <string name="youstay">Vous restez !</string>
    <string name="send">Envoyer</string>
    <string name="notified">Vous recevrez bien vos notifications</string>
    <string name="nonotif">Vous ne recevrez plus de Notifications</string>
    <string name="call">Appelle en cours</string>
    <string name="retired">Vous venez de vous retirer</string>
    <string name="youlike">Vous aimez !</string>
    <string name="dontlike">Vous n\'aimez plus !</string>
    <string name="pswd">AIzaSyApIPM8WUg0LDig8wUeSY8vvz3dj8mbgTc</string>
    <string name="here">Here !</string>
    <string name="choice">Choix, effacé !</string>
    <string name="benotified">Se notifier ?</string>
    <string name="parfavoris">Par Favoris</string>
    <string name="people">Par personne</string>
    <string name="proximity">Par proximité</string>
    <string name="newPlace">Place ajoutée !</string>
    <string name="open">Ouvert</string>
    <string name="fermé">Fermé</string>
    <string name="mustGPSOn">Vous devez absoulement allumer votre GPS pour pouvoir profiter de cette Application</string>
    <string name="GPSok">J\'ai bien activé mon GPS</string>
    <string name="mychoice">mon choix</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="button_to_push">Button to push</string>
    <string name="button_call">Button Call</string>
    <string name="button_like">Button like</string>
    <string name="internet_button">Internet Button</string>
    <string name="like">Like</string>
    <string name="unlike">"Disliké "</string>
    <string name="green_button">green Button</string>
    <string name="check_not_button">check not button</string>
    <string name="connectez_vous_avec_facebook">Connectez vous avec Facebook</string>
    <string name="facebook_button">FaceBook Button</string>
    <string name="connectez_vous_avec_google">Connectez vous avec Google</string>
    <string name="google_button">Google Button</string>
    <string name="avatar">Avatar</string>
    <string name="number_of_person_who_come">Number of person who come</string>
    <string name="Name">Le nom</string>
    <string name="adress">adresse</string>
    <string name="call_button">Call</string>
    <string name="button_not_like">Button not like</string>
    <string name="site">Site</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="deconnection">Deconnection</string>
    <string name="etes_vous_sur_de_voulaoir_partir">Etes vous sur de vouloir partir ?</string>
    <string name="me_rappeler_mon_rendez_vous_de_demain">Me rappeler mon rendez vous de demain ?</string>
    <string name="activer">Activer ?</string>
    <string name="nom">nom</string>
    <string name="name">name</string>
    <string name="nom_resto">nom resto</string>
    <string name="distance">distance</string>
    <string name="adresse">adresse</string>
    <string name="perso">perso</string>
    <string name="etoile">etoile</string>
    <string name="horaire">horaire</string>
    <string name="search">search</string>
    <string name="votre_d_jeuner">Votre Déjeuner</string>
    <string name="param_tre">Paramètre</string>
    <string name="se_deconnecter">Se Deconnecter</string>
    <string name="bad_internet">Connexion Internet mauvaise ou inexistante</string>
    <string name="unaivailable">horaire non disponible</string>
    <string name="no_restaurant_detected">No Restaurant Detected</string>
    <string name="place_id">ChIJN1t_tDeuEmsRUsoyG83frY4</string>
    <string name="au">au</string>
    <string name="VersionError">Votre Version d\'Android ne peut afficher les notifications sur cette application</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
