<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <group android:id="@+id/sortedmenu">
        <item
            android:id="@+id/fav"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/parfavoris" />
        <item
            android:id="@+id/people"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/people" />
        <item
            android:id="@+id/proxy"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/proximity" />
    </group>

</menu>
