<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="10sp"
    android:id="@+id/relativeRowPlace"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/photoresto"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/nomresto"
        android:layout_marginLeft="5dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold |italic"
        android:text="@string/nom_resto" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/photoresto"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/adresse"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nomresto"
        android:layout_marginLeft="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/adresse" />

    <TextView
        android:layout_marginLeft="5dp"
        android:id="@+id/horaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_below="@+id/adresse"
        android:text="@string/horaire" />

    <TextView
        android:id="@+id/perso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_toLeftOf="@+id/photoresto"
        android:text="@string/perso" />

    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:progressBackgroundTint="@android:color/transparent"
        android:numStars="3"
        android:layout_below="@+id/perso"
        android:layout_toLeftOf="@+id/photoresto"
        android:progressTint="@android:color/holo_orange_light"
        android:isIndicator="true"
        android:stepSize="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/perso"
        android:layout_toLeftOf="@+id/photoresto"
        android:visibility="gone"
        android:text="@string/etoile" />

    <ImageView
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_toLeftOf="@+id/perso"
        android:layout_below="@+id/distance"
        app:srcCompat="@drawable/ic_perm_identity_black_24dp"
        android:contentDescription="@string/number_of_person_who_come" />
</RelativeLayout>