<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/yourlunch"
            android:drawable="@android:color/white"

            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/votre_d_jeuner" />
        <item
            android:id="@+id/nav_param"
            android:drawable="@android:color/white"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/param_tre" />

        <item
            android:drawable="@android:color/white"
            android:id="@+id/nav_deco"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/se_deconnecter" />
    </group>

</menu>