<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Bases.MainActivity"
    android:background="@drawable/lunch_at_works"
    tools:openDrawer="start">
    <TextView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:background="@drawable/bol_logo" />
    <TextView
        android:id="@+id/go4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_below="@id/logo"
        android:gravity="center"
        android:text="@string/go4lunch" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="60dp"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:id="@+id/cardFa"
        android:layout_below="@+id/go4"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60sp"
        app:cardBackgroundColor="@android:color/transparent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_target1">

            <com.facebook.login.widget.LoginButton
                android:visibility="invisible"
                android:id="@+id/cardF"
                style="@style/FacebookLoginButton"
                android:layout_width="351dp"
                android:layout_height="49dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="60sp" />

            <ImageView
                android:id="@+id/cardF2"
                android:layout_marginLeft="10dp"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/com_facebook_button_icon_blue"
                android:contentDescription="@string/facebook_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:text="@string/connectez_vous_avec_facebook"
                android:gravity="center"
                android:textColor="@android:color/white"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardG"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_below="@+id/cardFa"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@android:color/transparent">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_target0">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/connectez_vous_avec_google"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"
                android:contentDescription="@string/google_button" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/deconnection"
            android:visibility="gone"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="29dp" />

    </RelativeLayout>